# Transformer

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.codex/environments/: environment.toml
configs/: reverse.toml
src/transformer/: __init__.py  cli.py  config.py
src/transformer/benchmarking/: __init__.py  inference.py
src/transformer/data/: __init__.py  batch.py  registry.py  vocab.py
src/transformer/data/tasks/: __init__.py  base.py  reverse.py
src/transformer/evaluation/: __init__.py  report.py
src/transformer/inference/: __init__.py  decoding.py
src/transformer/modeling/: __init__.py  attention.py  cache.py  layers.py  mask.py  transformer.py
src/transformer/training/: __init__.py  checkpointing.py  loop.py  losses.py
src/transformer/utils/: device.py  run_names.py
tests/: test_benchmarking.py  test_decoding.py  test_evaluation.py  test_masks.py  test_model_shapes.py  test_reverse_task.py  test_run_names.py  test_vocab.py
