[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.11.0+cu128",
    "torchvision==0.26.0+cu128",
    "torchaudio==2.11.0+cu128",
    "numpy>=2.4.4",
    "matplotlib>=3.11.0",
    "tqdm>=4.68.2",
    "ipykernel>=7.3.0",
]

[project.scripts]
transformer = "transformer.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transformer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tqdm"]
ignore_missing_imports = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]
torchaudio = [
    { index = "pytorch-cu128" },
]
